apps/base/miniflux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    app.kubernetes.io/name: miniflux
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
