apps/base/miniflux/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: miniflux-database
  namespace: miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: miniflux
      ports:
        - port: 5432
          protocol: TCP
  podSelector:
    matchLabels:
      cnpg.io/cluster: miniflux-database
  policyTypes:
    - Ingress
